# Machine-Learning-Activities

./: .pre-commit-config.yaml  pyproject.toml
classifiers/: KNN_classifier.py  NCC_classifier.py  bayesian_classifier.py  bayesian_classifier_discriminant.py  naive_bayes_classifier.py
notebooks/: coluna_KNN_and_NC.ipynb  iris_KNN_and_NC.ipynb  synthetic_KNN_and_NC.ipynb
notebooks/Atividade 1/: coluna_KNN_and_NC.ipynb  iris_KNN_and_NC.ipynb  synthetic_KNN_and_NC.ipynb
notebooks/Atividade 2/: iris.ipynb
notebooks/atividade_2/: coluna.ipynb  iris.ipynb  synthetic.ipynb
notebooks/atividade_3/: breast_cancer.ipynb  coluna.ipynb  dermatology.ipynb  iris.ipynb  synthetic.ipynb
notebooks/atividade_4/: breast_cancer.ipynb  coluna.ipynb  dermatology.ipynb  iris.ipynb  synthetic.ipynb
utils/: classifier_utils.py  dataset_utils.py  distance_calculator.py  image_generator.py  synthetic_data_generator.py
