[tool.poetry]
name = "machine-learning-activities"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "1.0.0"
ucimlrepo = "0.0.6"
pandas = "2.2.2"
matplotlib = "3.8.4"
seaborn = "0.13.2"
scikit-learn = "1.4.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
